# mindseye-google-gateway

./: CMakeLists.txt  README.md  gitignore
deploy/docker/: Dockerfile  cloudrun.yaml
include/mindseye/google/gateway/: auth_middleware.hpp  rate_limit.hpp  routes.hpp  server.hpp  sse_bus.hpp  types.hpp
include/mindseye/google/gateway/handlers/: ingest.hpp  ledger_view.hpp  mindscript_run.hpp  render_stream.hpp
src/: auth_middleware.cpp  main.cpp  rate_limit.cpp  routes.cpp  server.cpp  sse_bus.cpp
src/handlers/: ingest.cpp  ledger_view.cpp  mindscript_run.cpp  render_stream.cpp
